--- a/views/articles/index.ejs
+++ b/views/articles/index.ejs
@@ -4,12 +4,13 @@
 
   <div class="container">
     <div class="my-solid-background">
-      <h1>Read These!</h1>
+      <h1>Articles</h1>
+      <p><em>Learn more about the history and heroes of Blessed Astra</em></p>
     </div>
   </div>
 </div>
 
-<div style="min-width:90%;" class="container">
+<div style="min-width:90%;" class="container spacer-top-large spacer-bottom-large">
   <div style="background:#215e21;" class="row">
 
     <% articles.forEach(function(article) { %>
