--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,18 @@
   <div id="footer">
-    <h3 id="footer-quote"></h3>
+    <h2 id="footer-quote"></h2>
+
+    <h3 class="spacer-top"><a class="footer-link" href="/">Home</a></h3>
+    <h3><a class="footer-link" href="/jbadams">J. B. Adams</a></h3>
+    <h3><a class="footer-link" href="/articles">Explore</a></h3>
+    <h3 class="spacer"><a class="footer-link" href="/news">News</a></h3>
+
+    <ul class="list-inline">
+      <!-- <li><a class="social-link"><i class="fab fa-goodreads"></i></a></li> -->
+      <li><a class="font-double social-link" href="https://twitter.com/jbadamsauthor"><i class="fab fa-twitter"></i></a></li>
+      <li><a class="font-double social-link" href="https://www.instagram.com/jeremybruceadams"><i class="fab fa-instagram"></i></a></li>
+      <li><a class="font-double social-link"><i class="fab fa-facebook"></i></a></li>
+    </ul>
+
     <h6><em><i class="far fa-copyright"></i> Copyright 2018 thebloodoftheworld.com</em></h6>
   </div>
   <script type="text/javascript">
