--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,43 +5,82 @@
       <div class="container">
         <div class="my-solid-background">
           <h1>The Blood of the World</h1>
-          <p>The Blood of the World is an upcoming fantasy series by aspiring author Jeremy Bruce Adams. The first novel, "A Warden's Calling," tells the story of Araja, a young man cursed with the inability to wield magic, yet destined to change the world.</p>
-          <h2>What's New</h2>
+          <p><em>The Blood of the World is an upcoming fantasy series by aspiring author Jeremy Bruce Adams. The first novel, "A Warden's Calling," tells the story of Araja, a young man cursed with the inability to wield magic, yet destined to change the world.</em></p>
         </div>
       </div>
     </div>
 
-    <div class="container">
 
+
+    <div class="container spacer-top spacer" style="text-align: center; color:white; font-size:1.25em;">
       <div class="row">
-        <div class="col-lg-4 col-sm-6">
-          <div class="thumbnail"><div class="image image1"></div></div>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <div class="thumbnail"><div class="image image2"></div></div>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <div class="thumbnail"><div class="image image3"></div></div>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <div class="thumbnail"><div class="image image4"></div></div>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <div class="thumbnail"><div class="image image5"></div></div>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <div class="thumbnail"><div class="image image6"></div></div>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <div class="thumbnail"><div class="image image7"></div></div>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <div class="thumbnail"><div class="image image8"></div></div>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <div class="thumbnail"><div class="image image9"></div></div>
+        <div class="col-xs-12">
+          <h1>The Story</h1>
+          <hr>
         </div>
       </div>
+
+
+      <div class="row vertical-center">
+        <div class="col-xs-6">
+          <div><div class="image image1"></div></div>
+        </div>
+        <div class="col-xs-6">
+          <h2><em>A heroic soul, trapped in a cursed body</em></h2>
+          <p>Araja must have done something terrible in his past life to earn himself the curse he bears. While his peers can wield magic with ease, his inability to cast even the simplest spell is his punishment, a consequence of the bad karma from his previous incarnation. Only one fate awaits those who have failed their schooling as miserably as he has.</p>
+        </div>
+      </div>
+
+      <hr>
+
+      <div class="row vertical-center">
+        <div class="col-xs-6">
+          <h2><em>Thrown into an unforgiving world</em></h2>
+          <p>The global caste system Araja lives under considers him untouchable, and views him as an animal rather than a man. Denied access to further education, personal property, and even money, his only recourse is to become a bondservant to someone of higher birth.</p>
+        </div>
+        <div class="col-xs-6">
+          <div><div class="image image2"></div></div>
+        </div>
+      </div>
+
+      <hr>
+
+      <div class="row vertical-center">
+        <div class="col-xs-6">
+          <div><div class="image image3"></div></div>
+        </div>
+        <div class="col-xs-6">
+          <h2><em>The resurgence of an ancient evil</em></h2>
+          <p>But when a mysterious woman murders his grandfather—the only person that ever loved him—Araja is thrown into a war against apostates from a centuries-old schism, who now command a dark ritual that can steal souls.</p>
+        </div>
+      </div>
+
+      <hr>
+
+      <div class="row vertical-center">
+        <div class="col-xs-6">
+          <h2><em>A desperate pact</em></h2>
+          <p>Araja pledges his servitude to Purushatha—an inquisitor for the state religion—for an opportunity at vengeance and to help uncover the conspiracy behind his grandfather’s death.</p>
+        </div>
+        <div class="col-xs-6">
+          <div><div class="image image4"></div></div>
+        </div>
+      </div>
+
+      <hr>
+
+      <div class="row vertical-center">
+        <div class="col-xs-6">
+          <div><div class="image image5"></div></div>
+        </div>
+        <div class="col-xs-6">
+          <h2><em>A journey to forgotten lands</em></h2>
+          <p>Araja and his allies cross oceans on the back of a flying whale, plunder a temple at the heart of an underground jungle, and survive an exorcism in a haunted ashram, all to prevent an ancient weapon from ending up in the clutches of a rogue priest who seeks to remake creation.</p>
+        </div>
+      </div>
+
     </div>
+
+
 
 <% include partials/footer.ejs %>
