--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -7,17 +7,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a id="navbar-title" class="navbar-brand" href="#">The Blood of the World</a>
+          <a id="navbar-title" class="navbar-brand" href="/">The Blood of the World</a>
         </div>
 
         <div class="collapse navbar-collapse" id="my-navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a class="navbar-link" href="#">Home</a></li>
-            <li><a class="navbar-link" href="#">J.B. Adams</a></li>
-            <li><a class="navbar-link" href="#">Books</a></li>
-            <li><a class="navbar-link" href="#">Explore</a></li>
-            <li><a class="navbar-link" href="#">News</a></li>
-            <li><a class="navbar-link" href="#">Connect</a></li>
+            <li><a class="navbar-link" href="/">Home</a></li>
+            <li><a class="navbar-link" href="/jbadams">J. B. Adams</a></li>
+            <li><a class="navbar-link" href="/articles">Explore</a></li>
+            <li><a class="navbar-link" href="/news">News</a></li>
           </ul>
         </div>
 
