--- a/views/partials/social-top.ejs
+++ b/views/partials/social-top.ejs
@@ -3,9 +3,9 @@
     <form class="" action="index.html" method="post">
       <ul id="test-list" class="list-inline">
 
-        <li><a class="social-link"><i class="fab fa-goodreads"></i></a></li>
-        <li><a class="social-link"><i class="fab fa-twitter"></i></a></li>
-        <li><a class="social-link"><i class="fab fa-instagram"></i></a></li>
+        <!-- <li><a class="social-link"><i class="fab fa-goodreads"></i></a></li> -->
+        <li><a class="social-link" href="https://twitter.com/jbadamsauthor"><i class="fab fa-twitter"></i></a></li>
+        <li><a class="social-link" href="https://www.instagram.com/jeremybruceadams"><i class="fab fa-instagram"></i></a></li>
         <li><a class="social-link"><i class="fab fa-facebook"></i></a></li>
         <li class="navbar-signup"><button class="form-control btn my-buttons" id="newsletterButton" type="submit">Get the newsletter!</button></li>
       </ul>
