--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,7 +12,7 @@
 
 
 
-    <div class="container spacer-top spacer" style="text-align: center; color:white; font-size:1.25em;">
+    <div class="container article-index-start-spacer article-index-end-spacer" style="text-align: center; color:white; font-size:1.25em;">
       <div class="row">
         <div class="col-xs-12">
           <h1>The Story</h1>
@@ -21,11 +21,11 @@
       </div>
 
 
-      <div class="row vertical-center">
-        <div class="col-xs-6">
+      <div class="row">
+        <div class="col-lg-6 col-xs-12">
           <div><div class="image image1"></div></div>
         </div>
-        <div class="col-xs-6">
+        <div class="col-lg-6 col-xs-12">
           <h2><em>A heroic soul, trapped in a cursed body</em></h2>
           <p>Araja must have done something terrible in his past life to earn himself the curse he bears. While his peers can wield magic with ease, his inability to cast even the simplest spell is his punishment, a consequence of the bad karma from his previous incarnation. Only one fate awaits those who have failed their schooling as miserably as he has.</p>
         </div>
@@ -33,23 +33,23 @@
 
       <hr>
 
-      <div class="row vertical-center">
-        <div class="col-xs-6">
+      <div class="row">
+        <div class="col-lg-6 col-xs-12">
           <h2><em>Thrown into an unforgiving world</em></h2>
           <p>The global caste system Araja lives under considers him untouchable, and views him as an animal rather than a man. Denied access to further education, personal property, and even money, his only recourse is to become a bondservant to someone of higher birth.</p>
         </div>
-        <div class="col-xs-6">
+        <div class="col-lg-6 col-xs-12">
           <div><div class="image image2"></div></div>
         </div>
       </div>
 
       <hr>
 
-      <div class="row vertical-center">
-        <div class="col-xs-6">
+      <div class="row">
+        <div class="col-lg-6 col-xs-12">
           <div><div class="image image3"></div></div>
         </div>
-        <div class="col-xs-6">
+        <div class="col-lg-6 col-xs-12">
           <h2><em>The resurgence of an ancient evil</em></h2>
           <p>But when a mysterious woman murders his grandfather—the only person that ever loved him—Araja is thrown into a war against apostates from a centuries-old schism, who now command a dark ritual that can steal souls.</p>
         </div>
@@ -57,23 +57,23 @@
 
       <hr>
 
-      <div class="row vertical-center">
-        <div class="col-xs-6">
+      <div class="row">
+        <div class="col-lg-6 col-xs-12">
           <h2><em>A desperate pact</em></h2>
           <p>Araja pledges his servitude to Purushatha—an inquisitor for the state religion—for an opportunity at vengeance and to help uncover the conspiracy behind his grandfather’s death.</p>
         </div>
-        <div class="col-xs-6">
+        <div class="col-lg-6 col-xs-12">
           <div><div class="image image4"></div></div>
         </div>
       </div>
 
       <hr>
 
-      <div class="row vertical-center">
-        <div class="col-xs-6">
+      <div class="row">
+        <div class="col-lg-6 col-xs-12">
           <div><div class="image image5"></div></div>
         </div>
-        <div class="col-xs-6">
+        <div class="col-lg-6 col-xs-12">
           <h2><em>A journey to forgotten lands</em></h2>
           <p>Araja and his allies cross oceans on the back of a flying whale, plunder a temple at the heart of an underground jungle, and survive an exorcism in a haunted ashram, all to prevent an ancient weapon from ending up in the clutches of a rogue priest who seeks to remake creation.</p>
         </div>
