--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -8,9 +8,9 @@
 
     <ul class="list-inline">
       <!-- <li><a class="social-link"><i class="fab fa-goodreads"></i></a></li> -->
-      <li><a class="font-double social-link" href="https://twitter.com/jbadamsauthor"><i class="fab fa-twitter"></i></a></li>
+      <!-- <li><a class="font-double social-link" href="https://twitter.com/jbadamsauthor"><i class="fab fa-twitter"></i></a></li> -->
       <li><a class="font-double social-link" href="https://www.instagram.com/jeremybruceadams"><i class="fab fa-instagram"></i></a></li>
-      <li><a class="font-double social-link"><i class="fab fa-facebook"></i></a></li>
+      <!-- <li><a class="font-double social-link"><i class="fab fa-facebook"></i></a></li> -->
     </ul>
 
     <h6><em><i class="far fa-copyright"></i> Copyright 2018 thebloodoftheworld.com</em></h6>
