--- a/views/articles/show.ejs
+++ b/views/articles/show.ejs
@@ -14,36 +14,29 @@
 
 <div class="container article-body">
 
-  <div class="content indent">
+  <div class="indent article-content">
     <%-article.article_body%>
   </div>
   <hr>
 
   <div class="row" style="text-align:center;">
-    <div class="col-xs-1">
+
+    <div class="col-xs-5 previous-article-link">
       <% if (prevArticle !== null ) { %>
-        <a href="/articles/<%=prevArticle._id%>"><h4><i class="fas fa-arrow-left"></i></h4></a>
+        <a href="/articles/<%=prevArticle._id%>"><i class="fas fa-arrow-left"></i> Previous Article</a>
       <% } %>
     </div>
 
-    <div class="col-xs-3">
-      <% if (prevArticle !== null ) { %>
-        <a href="/articles/<%=prevArticle._id%>"><h4><%=prevArticle.title%></h4></a>
-      <% } %>
+    <div class="col-xs-2">
+      <a href="/articles">Back</a>
     </div>
-    <div class="col-xs-4">
-      <a href="/articles"><h4>Back to all Articles</h4></a>
-    </div>
-    <div class="col-xs-3">
+
+    <div class="col-xs-5 next-article-link">
       <% if (nextArticle !== null ) { %>
-        <a href="/articles/<%=nextArticle._id%>"><h4><%=nextArticle.title%></h4></a>
+        <a href="/articles/<%=nextArticle._id%>">Next Article <i class="fas fa-arrow-right"></i></a>
       <% } %>
     </div>
-    <div class="col-xs-1">
-      <% if (nextArticle !== null ) { %>
-        <a href="/articles/<%=nextArticle._id%>"><h4><i class="fas fa-arrow-right"></i></h4></a>
-      <% } %>
-    </div>
+
   </div>
 </div>
 
