--- a/views/partials/social-top.ejs
+++ b/views/partials/social-top.ejs
@@ -1,13 +1,13 @@
 <div id="my-jumbotron" class="jumbotron">
-  <div id="social-bar" class="container form-group">
+  <div style="padding: 0.5em;" id="social-bar" class="container form-group">
     <form class="" action="index.html" method="post">
       <ul id="test-list" class="list-inline">
 
         <!-- <li><a class="social-link"><i class="fab fa-goodreads"></i></a></li> -->
-        <li><a class="social-link" href="https://twitter.com/jbadamsauthor"><i class="fab fa-twitter"></i></a></li>
+        <!-- <li><a class="social-link" href="https://twitter.com/jbadamsauthor"><i class="fab fa-twitter"></i></a></li> -->
         <li><a class="social-link" href="https://www.instagram.com/jeremybruceadams"><i class="fab fa-instagram"></i></a></li>
-        <li><a class="social-link"><i class="fab fa-facebook"></i></a></li>
-        <li class="navbar-signup"><button class="form-control btn my-buttons" id="newsletterButton" type="submit">Get the newsletter!</button></li>
+        <!-- <li><a class="social-link"><i class="fab fa-facebook"></i></a></li> -->
+        <!-- <li class="navbar-signup"><button class="form-control btn my-buttons" id="newsletterButton" type="submit">Get the newsletter!</button></li> -->
       </ul>
     </form>
   </div>
