--- a/views/jbadams.ejs
+++ b/views/jbadams.ejs
@@ -11,40 +11,17 @@
 
 
 
-    <div class="container spacer-top spacer" style="text-align: center; color:white; font-size:1.25em;">
+    <div class="container article-index-start-spacer article-index-end-spacer" style="text-align: center; color:white; font-size:1.25em;">
 
-        <div style="width:33%; float:left;" class="image image1"></div>
+        <div class="image about-the-author-image"></div>
 
-        <div>
-          <h2><em>A heroic soul, trapped in a cursed body</em></h2>
-          <p>Araja must have done something terrible in his past life to earn himself the curse he bears. While his peers can wield magic with ease, his inability to cast even the simplest spell is his punishment, a consequence of the bad karma from his previous incarnation. Only one fate awaits those who have failed their schooling as miserably as he has.</p>
+        <div style="text-align: left;" class="indent">
+          <p>
+            <em>Jeremy Bruce Adams</em>
+            has worked as a software developer in cancer research and finance, all while moonlighting as an aspiring author. He has dived with sharks, zip lined through the rainforest, and swam in volcanic hot springs. He loves blending the fantasy and adventure genres, transporting readers to worlds of wild frontiers and larger-than-life heroes. When he isn’t writing, he’s catching up on the latest novels and video games. Jeremy lives with his wife in Toronto, Canada.
+          </p>
 
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut faucibus auctor porttitor. Fusce cursus nunc sollicitudin justo faucibus, sed pretium leo pellentesque. Sed sodales nunc magna, vel facilisis eros sodales a. Sed id erat vitae eros blandit feugiat. Aenean mollis lacinia justo, a interdum nisi iaculis sit amet. Pellentesque pulvinar a risus ac mattis. Vestibulum consequat, lacus ac feugiat dignissim, nibh nunc viverra est, sit amet facilisis turpis enim at nibh.</p>
 
-          <p>Cras nec blandit arcu, id consectetur ex. Praesent malesuada, nulla a varius interdum, neque sapien aliquet mauris, at dapibus est urna a lectus. Phasellus porta tincidunt urna, ac fringilla est imperdiet non. Nunc eu justo sagittis, auctor ligula in, blandit felis. Sed pretium rutrum eros, et dictum enim consectetur ac. Sed sed bibendum massa. Vivamus vestibulum efficitur orci, nec hendrerit mi lacinia in. Sed suscipit rutrum nunc, et hendrerit ante imperdiet ut. In hac habitasse platea dictumst. Morbi felis leo, venenatis sit amet viverra vel, tempor ut magna. Nam ac dictum nibh. Nunc dignissim risus sed mollis pulvinar. Aliquam mollis dolor non bibendum venenatis. In condimentum scelerisque neque, at maximus eros rhoncus a.</p>
-
-          <p>Fusce feugiat commodo congue. Ut congue sodales pretium. Duis ut mi justo. Fusce porta mi sed lacus lacinia sollicitudin vel ut diam. Curabitur nec velit diam. Nunc enim velit, convallis tincidunt porttitor vel, imperdiet iaculis metus. Curabitur a enim sagittis, ornare tellus ut, efficitur ipsum. Phasellus rhoncus sodales ante, ac scelerisque dolor.</p>
-
-          <p>Nunc non luctus neque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed ac mattis nisi, ut ultricies sapien. Donec venenatis egestas eros, ac dictum est lacinia vitae. Aliquam volutpat, ipsum eget pellentesque lacinia, nulla augue dignissim leo, sit amet varius nunc felis ut felis. Nunc hendrerit, turpis at feugiat lobortis, nisi nisl vestibulum erat, nec vulputate urna dui tincidunt lacus. Curabitur tellus enim, tempus consequat scelerisque nec, fermentum eu sapien. Vestibulum facilisis libero quis egestas varius.</p>
-
-          <p>Proin lobortis turpis orci, ac pellentesque tellus dignissim sed. Donec iaculis viverra tellus sed commodo. Sed nisl nulla, commodo eu elit non, lobortis condimentum tellus. Nunc rhoncus orci id diam pharetra, vitae tempor ex pharetra. Nunc aliquet risus et erat elementum ornare. Proin pulvinar efficitur purus, et interdum metus hendrerit eu. Vivamus sagittis eu libero eget lacinia. Curabitur blandit interdum arcu, sed aliquet enim. Suspendisse dapibus mi id turpis finibus condimentum. Sed et quam sed nisi fermentum ultricies. Donec non risus gravida, viverra metus ac, pellentesque urna. Proin sed eleifend magna. Fusce in enim nisi. Cras feugiat fringilla ex sit amet scelerisque.</p>
-        </div>
-
-        <div style="width:33%; float:left;" class="image image1"></div>
-
-        <div>
-          <h2><em>A heroic soul, trapped in a cursed body</em></h2>
-          <p>Araja must have done something terrible in his past life to earn himself the curse he bears. While his peers can wield magic with ease, his inability to cast even the simplest spell is his punishment, a consequence of the bad karma from his previous incarnation. Only one fate awaits those who have failed their schooling as miserably as he has.</p>
-
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut faucibus auctor porttitor. Fusce cursus nunc sollicitudin justo faucibus, sed pretium leo pellentesque. Sed sodales nunc magna, vel facilisis eros sodales a. Sed id erat vitae eros blandit feugiat. Aenean mollis lacinia justo, a interdum nisi iaculis sit amet. Pellentesque pulvinar a risus ac mattis. Vestibulum consequat, lacus ac feugiat dignissim, nibh nunc viverra est, sit amet facilisis turpis enim at nibh.</p>
-
-          <p>Cras nec blandit arcu, id consectetur ex. Praesent malesuada, nulla a varius interdum, neque sapien aliquet mauris, at dapibus est urna a lectus. Phasellus porta tincidunt urna, ac fringilla est imperdiet non. Nunc eu justo sagittis, auctor ligula in, blandit felis. Sed pretium rutrum eros, et dictum enim consectetur ac. Sed sed bibendum massa. Vivamus vestibulum efficitur orci, nec hendrerit mi lacinia in. Sed suscipit rutrum nunc, et hendrerit ante imperdiet ut. In hac habitasse platea dictumst. Morbi felis leo, venenatis sit amet viverra vel, tempor ut magna. Nam ac dictum nibh. Nunc dignissim risus sed mollis pulvinar. Aliquam mollis dolor non bibendum venenatis. In condimentum scelerisque neque, at maximus eros rhoncus a.</p>
-
-          <p>Fusce feugiat commodo congue. Ut congue sodales pretium. Duis ut mi justo. Fusce porta mi sed lacus lacinia sollicitudin vel ut diam. Curabitur nec velit diam. Nunc enim velit, convallis tincidunt porttitor vel, imperdiet iaculis metus. Curabitur a enim sagittis, ornare tellus ut, efficitur ipsum. Phasellus rhoncus sodales ante, ac scelerisque dolor.</p>
-
-          <p>Nunc non luctus neque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed ac mattis nisi, ut ultricies sapien. Donec venenatis egestas eros, ac dictum est lacinia vitae. Aliquam volutpat, ipsum eget pellentesque lacinia, nulla augue dignissim leo, sit amet varius nunc felis ut felis. Nunc hendrerit, turpis at feugiat lobortis, nisi nisl vestibulum erat, nec vulputate urna dui tincidunt lacus. Curabitur tellus enim, tempus consequat scelerisque nec, fermentum eu sapien. Vestibulum facilisis libero quis egestas varius.</p>
-
-          <p>Proin lobortis turpis orci, ac pellentesque tellus dignissim sed. Donec iaculis viverra tellus sed commodo. Sed nisl nulla, commodo eu elit non, lobortis condimentum tellus. Nunc rhoncus orci id diam pharetra, vitae tempor ex pharetra. Nunc aliquet risus et erat elementum ornare. Proin pulvinar efficitur purus, et interdum metus hendrerit eu. Vivamus sagittis eu libero eget lacinia. Curabitur blandit interdum arcu, sed aliquet enim. Suspendisse dapibus mi id turpis finibus condimentum. Sed et quam sed nisi fermentum ultricies. Donec non risus gravida, viverra metus ac, pellentesque urna. Proin sed eleifend magna. Fusce in enim nisi. Cras feugiat fringilla ex sit amet scelerisque.</p>
         </div>
     </div>
 
