back to square images

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -23,7 +23,7 @@
 
       <div class="row">
         <div class="col-lg-6 col-xs-12">
-          <div><div class="image image1 rounded-img"></div></div>
+          <div><div class="image image1"></div></div>
         </div>
         <div class="col-lg-6 col-xs-12">
           <h2><em>A heroic soul, trapped in a cursed body</em></h2>
@@ -39,7 +39,7 @@
           <p>The global caste system Araja lives under considers him untouchable, and views him as an animal rather than a man. Denied access to further education, personal property, and even money, his only recourse is to become a bondservant to someone of higher birth.</p>
         </div>
         <div class="col-lg-6 col-xs-12">
-          <div><div class="image image2 rounded-img"></div></div>
+          <div><div class="image image2"></div></div>
         </div>
       </div>
 
@@ -47,7 +47,7 @@
 
       <div class="row">
         <div class="col-lg-6 col-xs-12">
-          <div><div class="image image3 rounded-img"></div></div>
+          <div><div class="image image3"></div></div>
         </div>
         <div class="col-lg-6 col-xs-12">
           <h2><em>The resurgence of an ancient evil</em></h2>
@@ -63,7 +63,7 @@
           <p>Araja pledges his servitude to Purushatha—an inquisitor for the state religion—for an opportunity at vengeance and to help uncover the conspiracy behind his grandfather’s death.</p>
         </div>
         <div class="col-lg-6 col-xs-12">
-          <div><div class="image image4 rounded-img"></div></div>
+          <div><div class="image image4"></div></div>
         </div>
       </div>
 
